--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@ $link: #2d6dd4; //improve contrast over footer
 $blue-light: hsl(209, 71%, 63%); // https://github.com/jloh/bulma-prefers-dark/issues/31
 $link-dark: $blue-light;
 @import "~bulma-prefers-dark/bulma-prefers-dark";
+@import "~react-advanced-cropper/dist/style.css";
 
 html {
     overflow-x: auto;
